# finny.rs

./: .travis.yml  Cargo.toml  README.md  todo.md
.github/workflows/: ci.yml
finny/: Cargo.toml
finny/src/: inspect_slog.rs  lib.rs
finny/src/decl/: event.rs  fsm.rs  mod.rs  state.rs  sub.rs
finny/src/fsm/: dispatch.rs  events.rs  fsm_factory.rs  fsm_impl.rs  inspect.rs  mod.rs  queue.rs  states.rs  tests_fsm.rs  timers.rs  transitions.rs
finny/src/fsm/inspect/: chain.rs  events.rs  mod.rs  null.rs
finny/src/inspect/: chain.rs  events.rs  mod.rs  null.rs  slog.rs
finny/src/timers/: core.rs  mod.rs  std.rs  std_noalloc.rs
finny_derive/: Cargo.toml
finny_derive/src/: codegen.rs  codegen_info.rs  codegen_meta.rs  fsm.rs  lib.rs  parse.rs  parse_blocks.rs  parse_fsm.rs  parse_statements.rs  utils.rs  validation.rs
finny_derive/src/info/: mod.rs
finny_derive/src/meta/: mod.rs  plantuml.rs
finny_nostd_tests/: Cargo.toml
finny_nostd_tests/src/: main.rs
finny_tests/: Cargo.toml
finny_tests/src/: lib.rs
finny_tests/tests/: fsm_fn.rs  fsm_generic_ctx.rs  fsm_minimal.rs  fsm_queues.rs  fsm_regions.rs  fsm_sub.rs  fsm_sub_generic.rs  fsm_timers.rs
fsm/: Cargo.toml
fsm/src/: console_inspect.rs  inspect_combinator.rs  inspect_data.rs  json_diff.rs  lib.rs  machine.rs
fsm/src/fsm/: declaration.rs  info.rs  inspect.rs  mod.rs  timers.rs
fsm/src/prelude/: std.rs
fsm_codegen/: Cargo.toml
fsm_codegen/src/: codegen.rs  codegen_info.rs  fsm_def.rs  graph.rs  imports.rs  lib.rs  parse.rs  parse_fn.rs  parse_fn_visitors.rs  viz.html  viz.rs  viz_fsm.js
fsm_core/: Cargo.toml
fsm_core/src/: decl.rs  fsm.rs  fsm_codegen_mocks.rs  lib.rs
fsm_core/src/decl/: event.rs  fsm.rs  state.rs
fsm_core/src/fsm/: fsm_impl.rs  mod.rs
fsm_derive/: Cargo.toml
fsm_derive/src/: codegen.rs  lib.rs  parse.rs  parse_blocks.rs  utils.rs
fsm_inspect_web/: Cargo.toml
fsm_inspect_web/examples/: lights.rs
fsm_inspect_web/fsm-frontend/: .angular-cli.json  README.md  package-lock.json  package.json
fsm_inspect_web/fsm-frontend/e2e/: app.e2e-spec.ts
fsm_inspect_web/fsm-frontend/src/: index.html  styles.scss  typings.d.ts
fsm_inspect_web/fsm-frontend/src/app/: app.component.html  app.component.scss  app.component.ts  app.module.ts  fsm-event.ts  fsm-state.service.spec.ts  fsm-state.service.ts  tab.ts  tabs.ts
fsm_inspect_web/fsm-frontend/src/app/events/: display-event-row.html  display-event-row.ts  display-event.html  display-event.ts  events.component.html  events.component.scss  events.component.ts
fsm_inspect_web/fsm-frontend/src/app/fsm-overview/: fsm-overview.component.html  fsm-overview.component.scss  fsm-overview.component.spec.ts  fsm-overview.component.ts
fsm_inspect_web/fsm-frontend/src/app/json-inspect/: json-inspect.component.html  json-inspect.component.spec.ts  json-inspect.component.ts
fsm_inspect_web/fsm-frontend/src/assets/: json-tree-view.scss
fsm_inspect_web/src/: data.rs  lib.rs  server_state.rs  server_web.rs  server_ws.rs
fsm_inspect_web/static/: viz_fsm.js
fsm_inspect_web/templates/: index.html.hbs
fsm_tests/: Cargo.toml
fsm_tests/src/: lib.rs
fsm_tests/tests/: boost_composite.rs  boost_composite.rs.tmp  boost_composite_fn.rs  boost_history.rs  boost_history.rs.tmp  boost_history_fn.rs  fsm1.rs  fsm_fn.rs  fsm_fn2.rs  fsm_fn3.rs  generic.rs  min1.rs  min2.rs  orthogonal.rs  orthogonal2.rs
fsm_timers_std/: Cargo.toml
fsm_timers_std/examples/: lights.rs
fsm_timers_std/src/: lib.rs
fsm_timers_std/tests/: lights.rs
src/: console_inspect.rs  lib.rs  machine.rs  macros.rs
src/prelude/: no_std.rs
