[package]
name = "fsm"
version = "0.1.0"
authors = ["Rudi Benkovic <rudi.benkovic@gmail.com>"]

[dependencies]
serde = { version = "1.0" }
serde_derive = { version = "1.0", optional = true }

[features]
default = ["std", "info_serializable"]
std = []
core_collections = []
info_serializable = ["serde_derive"]
