[package]
name = "finny"
version = "0.2.0"
authors = ["Rudi Benkovic <rudi.benkovic@gmail.com>"]
edition = "2018"
repository = "https://github.com/hashmismatch/finny.rs"
description = "Finite State Machines with a procedural builder-style API and compile time transition checks."
license = "MIT OR Apache-2.0"
keywords = ["fsm", "state", "state-machine"]
categories = ["data-structures", "algorithms", "rust-patterns", "no-std"]
readme = "../README.md"

[dependencies]
derive_more = "0.99.11"
finny_derive = { path = "../finny_derive", version = "0.2.0" }
arraydeque = { version = "0.4", default-features = false }
slog = { version = "2.7.0", optional = true }


[features]
default = ["std", "inspect_slog", "timers_std"]
std = ["arraydeque/std", "timers_std"]
inspect_slog = ["slog"]
timers_std = []
generate_plantuml = ["finny_derive/generate_plantuml"]