[package]
name = "finny_nostd_tests"
version = "0.1.0"
authors = ["Rudi Benkovic <rudi.benkovic@gmail.com>"]
edition = "2018"


[dependencies]
libc = { version = "0.2", default-features = false }
finny = { path = "../finny/", default-features = false }

[profile.dev]
panic = "abort" # disable stack unwinding on panic

[profile.release]
panic = "abort"

[target.x86_64-pc-windows-msvc]
rustflags = ["-C", "link-args=/ENTRY:main /SUBSYSTEM:console"]