[package]
name = "fsm_codegen"
version = "0.1.0"
authors = ["Rudi Benkovic <rudi.benkovic@gmail.com>"]

[features]
default = ["viz"]
viz = []
viz_docs = []

[dependencies]
quote = "^0.3.10"
itertools = "0.5.8"
petgraph = "0.4.3"

[dependencies.syn]
version = "^0.11.11"
features = ["full", "parsing", "printing"]

[dependencies.fsm]
path = "../"
default-features = false 

[lib]
proc-macro = true

