[package]
name = "fsm_codegen"
version = "0.1.0"
authors = ["Rudi Benkovic <rudi.benkovic@gmail.com>"]

[features]
default = ["viz"]
viz = []
viz_docs = []

[dependencies]
quote = "0.4"
itertools = "0.5.8"
petgraph = "0.4.3"
proc-macro2 = { version = "0.2", features = ["nightly"] }

[dependencies.syn]
version = "0.12"
features = ["full", "parsing", "printing", "extra-traits", "visit"]

[dependencies.fsm]
path = "../"
default-features = false 

[lib]
proc-macro = true

